/**
 * Describe la prioridad de la tarea.
 */
export enum PRIORIDAD {
    /**
     * La tarea tiene prioridad baja.
     */
    BAJA = 0,
    /**
     * La tarea tiene prioridad media.
     */
    MEDIA = 1,
    /**
     * La tarea tiene prioridad alta.
     */
    ALTA = 2,
}